fixed horizontal scroll bar mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap');
 
+html, body {
+    overflow-x: hidden;
+}
+
 body {
     font-family: "Roboto", sans-serif;
     color: #2c3531 !important;
-    overflow-x: hidden;
+    position: relative;
 }
 
 .content-container {
